--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -1579,9 +1579,9 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 
           <div class="Grid--gutters">
 
-            <div class="rowToColumn">
+            <div class="rowToColumn centerVH">
               <div class="widthMax">
-                <div class="Demo ">
+                <div class="Demo">
                   <div class="elementInnerDemo max-width"></div>
                 </div>
               </div>
