--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -3619,27 +3619,27 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 
                           <li class="nav-item marginZero active activeNav">
 
-                            <a href="/" class="nav-link box">PROJECT</a>
+                            <a href="/" class="nav-link_archived box">PROJECT</a>
                           </li>
 
                           <li class="nav-item marginZero inactive">
 
-                            <a href="/architecture" class="nav-link box">ARCHITECTURE</a>
+                            <a href="/architecture" class="nav-link_archived box">ARCHITECTURE</a>
                           </li>
 
                           <li class="nav-item marginZero inactive">
 
-                            <a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+                            <a href="/photography" class="nav-link_archived box">PHOTOGRAPHY</a>
                           </li>
 
                           <li class="nav-item marginZero inactive">
 
-                            <a href="/blog" class="nav-link box">BLOG</a>
+                            <a href="/blog" class="nav-link_archived box">BLOG</a>
                           </li>
 
                           <li class="nav-item marginZero inactive">
 
-                            <a href="/about" class="nav-link box">ABOUT</a>
+                            <a href="/about" class="nav-link_archived box">ABOUT</a>
                           </li>
 
                         </ul>
@@ -3675,19 +3675,19 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                       <div class="navbar">
                         <ul class="nav-menu">
                           <li class="nav-item marginZero active activeNav">
-                            <a href="/" class="nav-link box">PROJECT</a>
+                            <a href="/" class="nav-link_archived box">PROJECT</a>
                           </li>
                           <li class="nav-item marginZero inactive">
-                            <a href="/architecture" class="nav-link box">ARCHITECTURE</a>
+                            <a href="/architecture" class="nav-link_archived box">ARCHITECTURE</a>
                           </li>
                           <li class="nav-item marginZero inactive">
-                            <a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+                            <a href="/photography" class="nav-link_archived box">PHOTOGRAPHY</a>
                           </li>
                           <li class="nav-item marginZero inactive">
-                            <a href="/blog" class="nav-link box">BLOG</a>
+                            <a href="/blog" class="nav-link_archived box">BLOG</a>
                           </li>
                           <li class="nav-item marginZero inactive">
-                            <a href="/about" class="nav-link box">ABOUT</a>
+                            <a href="/about" class="nav-link_archived box">ABOUT</a>
                           </li>
                         </ul>
                       </div>
