--- a/templates/shared/block_nav_header_main.ejs
+++ b/templates/shared/block_nav_header_main.ejs
@@ -16,16 +16,16 @@
       <div class="navbar">
         <ol class="nav-menu <%= headerBackgroundColor %>">
           <li class="nav-item active activeNav box">
-            <a href="<%- sectionURL1 %>" class="nav-link">PROJECTS</a>
+            <a href="<%- sectionURL1 %>" class="nav-link_archived">PROJECTS</a>
           </li>
           <li class="nav-item active activeNav box">
-            <a href="<%- sectionURL2 %>" class="nav-link ">EXPERIMENTS</a>
+            <a href="<%- sectionURL2 %>" class="nav-link_archived ">EXPERIMENTS</a>
           </li>
           <li class="nav-item active activeNav box">
-            <a href="<%- sectionURL3 %>" class="nav-link ">DESIGN SYSTEM</a>
+            <a href="<%- sectionURL3 %>" class="nav-link_archived ">DESIGN SYSTEM</a>
           </li>
           <li class="nav-item active activeNav box">
-            <a href="<%- sectionURL4 %>" class="nav-link ">ABOUT</a>
+            <a href="<%- sectionURL4 %>" class="nav-link_archived ">ABOUT</a>
           </li>
         </ol>
       </div>
